# windows-build-test

./: README.md  pubspec.yaml
.github/workflows/: flutter-windows-build.yml
android/: local.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/g_project/: MainActivity.kt
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
